Version ya consistente entre clases
ya compila esta version